--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "build": "npm install"
+    "start":"node index.js",
+    "dev":"nodemon index.js",
+    "build":"npm install --prefix server && npm install --prefix client && npm run build --prefix client"
+
   },
   "keywords": [],
   "author": "",
