--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start":"node index.js",
     "dev":"nodemon index.js",
-    "build":"npm install --prefix server && npm install --prefix client && npm run build --prefix client"
+    "build":"npm install && npm run build --prefix client"
 
   },
   "keywords": [],
